// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsedTime check loading 1`] = `
<div>
  <div
    class="usedTime padding-title"
  >
    <div
      class="loading"
    >
      <div
        class="spinner-border text-success"
      />
    </div>
  </div>
</div>
`;

exports[`UsedTime error task 1`] = `
<div>
  <div
    class="usedTime padding-title"
  >
    <div
      class="error"
    >
      Error
      <img
        alt="not-found"
        height="100px"
        src="https://www.pngitem.com/pimgs/m/561-5616833_image-not-found-png-not-found-404-png.png"
        width="100px"
      />
    </div>
  </div>
</div>
`;

exports[`UsedTime handle Click UsedTime 1`] = `
<div>
  <div
    class="usedTime padding-title"
  >
    <div
      class="usedTime-container"
    >
      <div
        class="usedTime-container-table"
      >
        <div
          class="row"
        >
          <div
            class="col-2"
          >
            UserName
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-up "
              data-icon="circle-up"
              data-prefix="fas"
              data-testid="arrow-circle-up"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256c141.4 0 256-114.6 256-256S397.4 0 256 0zM382.8 246.1C380.3 252.1 374.5 256 368 256h-64v96c0 17.67-14.33 32-32 32h-32c-17.67 0-32-14.33-32-32V256h-64C137.5 256 131.7 252.1 129.2 246.1C126.7 240.1 128.1 233.3 132.7 228.7l112-112c6.248-6.248 16.38-6.248 22.62 0l112 112C383.9 233.3 385.3 240.1 382.8 246.1z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="col-3"
          >
            OS Name
          </div>
          <div
            class="col-3"
          >
            Date
          </div>
          <div
            class="col-1"
          >
            Total
          </div>
          <div
            class="col-1"
          >
            Fb
          </div>
          <div
            class="col-1"
          >
            Yb
          </div>
          <div
            class="col-1"
          >
            Other
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-2"
          >
            g5zxl
          </div>
          <div
            class="col-3"
          >
            Android
          </div>
          <div
            class="col-3"
          >
            2017-04-13
          </div>
          <div
            class="col-1"
          >
            7
          </div>
          <div
            class="col-1"
          >
            6
          </div>
          <div
            class="col-1"
          >
            8
          </div>
          <div
            class="col-1"
          >
            7
          </div>
          <div
            class="col-2"
          >
            pqjx1
          </div>
          <div
            class="col-3"
          >
            iOS
          </div>
          <div
            class="col-3"
          >
            2016-04-03
          </div>
          <div
            class="col-1"
          >
            11
          </div>
          <div
            class="col-1"
          >
            7
          </div>
          <div
            class="col-1"
          >
            9
          </div>
          <div
            class="col-1"
          >
            18
          </div>
        </div>
      </div>
      <div
        class="usedTime-container-pagination"
      >
        
        <nav
          aria-label="Countries Pagination"
        >
          <ul
            class="pagination"
          >
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=1"
              >
                <a
                  class="page-link"
                  data-testid="1"
                  href="#"
                >
                  1
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=8"
              >
                <a
                  aria-label="Previous"
                  class="page-link"
                  href="#"
                >
                  <span
                    aria-hidden="true"
                  >
                    «
                  </span>
                  <span
                    class="sr-only"
                  >
                    Previous
                  </span>
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=6"
              >
                <a
                  class="page-link"
                  data-testid="6"
                  href="#"
                >
                  6
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=7"
              >
                <a
                  class="page-link"
                  data-testid="7"
                  href="#"
                >
                  7
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=8"
              >
                <a
                  class="page-link"
                  data-testid="8"
                  href="#"
                >
                  8
                </a>
              </a>
            </li>
            <li
              class="page-item active"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=9"
              >
                <a
                  class="page-link"
                  data-testid="9"
                  href="#"
                >
                  9
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=10"
              >
                <a
                  class="page-link"
                  data-testid="10"
                  href="#"
                >
                  10
                </a>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsedTime render UsedTime 1`] = `
<div>
  <div
    class="usedTime padding-title"
  >
    <div
      class="usedTime-container"
    >
      <div
        class="usedTime-container-table"
      >
        <div
          class="row"
        >
          <div
            class="col-2"
          >
            UserName
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-up "
              data-icon="circle-up"
              data-prefix="fas"
              data-testid="arrow-circle-up"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256c141.4 0 256-114.6 256-256S397.4 0 256 0zM382.8 246.1C380.3 252.1 374.5 256 368 256h-64v96c0 17.67-14.33 32-32 32h-32c-17.67 0-32-14.33-32-32V256h-64C137.5 256 131.7 252.1 129.2 246.1C126.7 240.1 128.1 233.3 132.7 228.7l112-112c6.248-6.248 16.38-6.248 22.62 0l112 112C383.9 233.3 385.3 240.1 382.8 246.1z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="col-3"
          >
            OS Name
          </div>
          <div
            class="col-3"
          >
            Date
          </div>
          <div
            class="col-1"
          >
            Total
          </div>
          <div
            class="col-1"
          >
            Fb
          </div>
          <div
            class="col-1"
          >
            Yb
          </div>
          <div
            class="col-1"
          >
            Other
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-2"
          >
            g5zxl
          </div>
          <div
            class="col-3"
          >
            Android
          </div>
          <div
            class="col-3"
          >
            2017-04-13
          </div>
          <div
            class="col-1"
          >
            7
          </div>
          <div
            class="col-1"
          >
            6
          </div>
          <div
            class="col-1"
          >
            8
          </div>
          <div
            class="col-1"
          >
            7
          </div>
          <div
            class="col-2"
          >
            pqjx1
          </div>
          <div
            class="col-3"
          >
            iOS
          </div>
          <div
            class="col-3"
          >
            2016-04-03
          </div>
          <div
            class="col-1"
          >
            11
          </div>
          <div
            class="col-1"
          >
            7
          </div>
          <div
            class="col-1"
          >
            9
          </div>
          <div
            class="col-1"
          >
            18
          </div>
        </div>
      </div>
      <div
        class="usedTime-container-pagination"
      >
        
        <nav
          aria-label="Countries Pagination"
        >
          <ul
            class="pagination"
          >
            <li
              class="page-item active"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=1"
              >
                <a
                  class="page-link"
                  data-testid="1"
                  href="#"
                >
                  1
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=2"
              >
                <a
                  class="page-link"
                  data-testid="2"
                  href="#"
                >
                  2
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=3"
              >
                <a
                  class="page-link"
                  data-testid="3"
                  href="#"
                >
                  3
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=4"
              >
                <a
                  class="page-link"
                  data-testid="4"
                  href="#"
                >
                  4
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=5"
              >
                <a
                  class="page-link"
                  data-testid="5"
                  href="#"
                >
                  5
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=2"
              >
                <a
                  aria-expanded="false"
                  aria-label="Next"
                  class="page-link"
                  href="#"
                >
                  <span
                    aria-hidden="true"
                  >
                    »
                  </span>
                  <span
                    class="sr-only"
                  >
                    Next
                  </span>
                </a>
              </a>
            </li>
            <li
              class="page-item"
            >
              <a
                href="/?fromDate_=2021-08-08&toDate_=2021-08-09&currentPage=10"
              >
                <a
                  class="page-link"
                  data-testid="10"
                  href="#"
                >
                  10
                </a>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
